# BlockForge

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: cnn_refactor_notes.md
examples/: cnn.py  nn.py  resnet.py
src/basic/: __init__.py  block.py  conv_block.py  residual.py  sequential.py
src/nlp/charcnn/: charcnn.py  model.py
src/vision/cnn/: __init__.py  model.py
src/vision/res/: resnet.py
